[package]
name = "dioxus_meta_app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["macro","web"] }
dioxus-web = "0.6.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console", "HtmlInputElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
