[package]
name = "dioxus_meta_app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["macro","web"] }
#dioxus = { version = "0.7.1", features = ["macro","web"], git = "https://github.com/dioxuslabs/dioxus", branch="main"}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console", "HtmlInputElement"] }
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console_log = "1.0"
alloy = {version = "1.1", default-features = false }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
