[package]
name = "dioxus_meta_app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["asset", "devtools", "document", "hooks", "html", "launch", "macro", "signals"], default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
js-sys = { version = "0.3", default-features = false }
web-sys = { version = "0.3", default-features = false }
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
log = "0.4"
console_log = "1.0"
alloy = {version = "1.1", default-features = false }

[profile]

# [profile.release]
# strip = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
